smr-platform/templates/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: kafka
        image: bitnami/kafka:2.8.0
        ports:
        - containerPort: 9092
---
kind: Service
apiVersion: v1
metadata:
  name: kafka-service
spec:
  selector:
    app: kafka
  type: NodePort
  ports:
  - protocol: TCP
    port: 9092
    targetPort: 9092
    nodePort: 30001
