smr-platform/templates/kafka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
spec:
  rules:
  - host: kafka.argo.com
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: kafka
            port:
              number: 30001
