smr-platform/templates/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
spec:
  rules:
  - host: mongo-express.argo.com
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: mongo-express
            port:
              number: 30000
